# walltashi

./: README.md
.github/workflows/: frontend-lint.yml
backend/: Makefile  README.md  go.mod  go.sum
backend/internal/database/: database.go  database_test.go
frontend/: .gitignore  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsr.config.json  vite.config.ts
frontend/app/: index.css  main.tsx  routeTree.gen.ts
frontend/app/lib/wasm/: package.json  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
frontend/app/routes/: __root.tsx  index.tsx
frontend/app/routes/dingboard/: index.tsx
frontend/app/routes/dingboard/-components/: ExampleComp.tsx  ResizeComp.tsx
frontend/app/routes/example/: index.tsx
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
